# Automated-research-report-generation

./: get_lib_versions.py  pyproject.toml  requirements.txt
notebook/: test.ipynb
research_and_analyst/exception/: custom_exception.py
research_and_analyst/notebook/: research_automation.py  test.ipynb  test.py
research_and_analyst/utils/: config_loader.py  model_loader.py
