
[build-system]
requires = ["setuptools>=68"]         # PEP 660 editable support ke liye naya setuptools
build-backend = "setuptools.build_meta"

[project]
name = "automated-research-report-generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "langchain-community>=0.3.31",
    "langchain-core>=0.3.79",
    "langchain-google-genai>=2.1.12",
    "langchain-groq>=0.3.8",
    "langchain-openai>=0.3.35",
    "langgraph>=0.6.10",
    "structlog>=25.4.0",
    "tavily-python>=0.7.12",
    "wikipedia>=1.4.0",
]

# Optional: authors, license
authors = [{ name = "Ramesh Manandhar" }]
license = { text = "Proprietary" }

# Optional: CLI command (python -m pip install -e . ke baad yeh create hoga)
[project.scripts]
research_and_analyst = "Automated_research_report_generation.cli:main"

[tool.setuptools.packages.find]
where = ["research_and_analyst"]
include = ["Automated-research-report-generation"]
